<resources>
    <string name="app_name">Ficha Técnica - Motor</string>
    <string name="app_name_description">Ficha técnica de motor</string>
    <string name="app_version">versión 1.0</string>

    // Menú
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="largo_hierro">Largo del Hierro</string>
    <string name="ficha_tecnica">Ficha Técnica</string>
    <string name="ayuda">Ayuda</string>
    <string name="acerca_de">Acerca de!</string>

    //Wizard1
    <string name="punto1">Apklis Instalada</string>
    <string name="punto2">Sección iniciada en Apklis</string>
    <string name="punto3">Aplicación comprada en Apklis</string>
    <string name="wizard_jump">No mostrar nuevamente</string>
    <string name="wizard_description">FiTecMotor es una aplicación de pago, para que usted pueda disfrutar de la misma debe cumplir con los requerimientos siguientes</string>
    <string name="button_iniciar">Comprobar estado</string>

    //Resto propiedades
    <string name="imagen">Imagen</string>
    <string name="fab_content_desc">Agregar</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>

    //Fragment Marca
    <string name="et_marca">Marca*</string>
    <string name="helper_marca">Entre una marca de motor</string>

    //Fragment Modelo
    <string name="et_modelo">Modelo*</string>
    <string name="helper_modelo">Entre un modelo de motor</string>

    //Fragment Largo Hierro
    <string name="et_largo_hierro">Largo del Hierro*</string>
    <string name="helper_largo_hierro">Entre el largo del hierro</string>
    <string name="et_diametro_interior">Diametro Interior</string>
    <string name="helper_diametro_interior">Entre el diametro interior</string>
    <string name="et_diametro_exterior">Diametro Exterior</string>
    <string name="helper_diametro_exterior">Entre el diametro exterior</string>

    //Fragment Ficha Tecnica
    <string name="et_nombre_motor">Nombre Motor*</string>
    <string name="et_corriente_nominal">Corriente Nominal (In)*</string>
    <string name="suffixIn">a</string>
    <string name="et_potencia">Potencia (Pn)*</string>
    <string name="suffixPN">kW</string>
    <string name="et_ip">IP*</string>
    <string name="et_tencion_nominal">Tención Nominal (Vn)*</string>
    <string name="suffixVn">V</string>
    <string name="et_diametro_succion">Diametro de Succión*</string>
    <string name="suffixDs">ø</string>
    <string name="et_diametro_descarga">Diametro de Descarga*</string>
    <string name="suffixDd">Ø</string>
    <string name="et_tipo_capacitor">Tipo de Capacitor*</string>
    <string name="et_capacidad_capacitor">Capacidad del Capacitor*</string>
    <string name="suffixC">F</string>
    <string name="et_datos_enrollado">Datos del Enrollado</string>
    <string name="et_foto_motor">Foto del Motor</string>
    <string name="et_fav">Fav</string>

    //Errores de formularios
    <string name="campo_requerido">*Campo requerido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>