<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".RequerimentFragment">

    <ImageView
        android:id="@+id/imageViewDecorativa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/decorativa" />

    <ImageView
        android:id="@+id/imageViewAppName"
        android:layout_width="281dp"
        android:layout_height="90dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nombre_app" />

    <Button
        android:id="@+id/bIniciarApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/button_iniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bIniciarApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAppName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/tvDescripcion"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_description"
            android:textColor="@color/primaryTextColor" />

        <com.baoyachi.stepview.VerticalStepView
            android:id="@+id/step_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15sp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="5sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>