<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".splash.SplashFragment">

    <ImageView
        android:id="@+id/imageViewDecorativa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/decorativa" />

    <ImageView
        android:id="@+id/imageViewAppName"
        android:layout_width="281dp"
        android:layout_height="90dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nombre_app" />

    <ImageView
        android:id="@+id/imageViewAppLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAppName"
        app:srcCompat="@drawable/logo_app" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        style="Widget.MaterialComponents.LinearProgressIndicator"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:indeterminate="true"
        app:indicatorColor="@color/progressBarIndicator"
        app:trackColor="@color/progressBarTrack"
        app:layout_constraintBottom_toTopOf="@+id/textViewAppNameDescription"
        app:layout_constraintEnd_toEndOf="@+id/imageViewAppName"
        app:layout_constraintStart_toStartOf="@+id/imageViewAppName" />

    <TextView
        android:id="@+id/textViewAppNameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name_description"
        android:textColor="@color/primaryTextColor"
        style="@style/TextAppearance.MdcTypographyStyles.Headline6"
        app:layout_constraintBottom_toTopOf="@+id/textViewAppVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/app_version"
        android:textColor="@color/primaryTextColor"
        style="@style/TextAppearance.MdcTypographyStyles.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>